# iNLPA3

./: .env.example  .gitignore  Instructions.md  README.md  main.py  pyproject.toml
config/: .gitkeep
config/task1/: .gitkeep  lstm.yaml  rnn.yaml
config/task2/: .gitkeep  bilstm.yaml  ssm.yaml
config/task3/: .gitkeep  bilstm.yaml  ssm.yaml
data/: .gitkeep
outputs/: .gitkeep  task1_lstm.txt  task1_lstm_best.txt  task1_rnn.txt  task1_rnn_best.txt  task2_bilstm.txt  task2_ssm.txt  task3_bilstm.txt  task3_ssm.txt
src/: .gitkeep
src/task1/: metrics.py  models.py  rnn_train.py  trainer.py
src/task2/: bilstm_train.py  models.py  ssm_train.py  trainer.py
src/task3/: pipeline.py
src/utils/: checkpoints.py  dataset.py  hf_wandb.py
